--- a/packages.bib
+++ b/packages.bib
@@ -33,10 +33,10 @@
 
 @Manual{R-BiocManager,
   title = {BiocManager: Access the Bioconductor Project Package Repository},
-  author = {Martin Morgan},
-  year = {2022},
-  note = {R package version 1.30.19},
-  url = {https://CRAN.R-project.org/package=BiocManager},
+  author = {Martin Morgan and Marcel Ramos},
+  year = {2023},
+  note = {R package version 1.30.22},
+  url = {https://bioconductor.github.io/BiocManager/},
 }
 
 @Manual{R-BiocParallel,
@@ -116,6 +116,14 @@ PostScript) and Display (X11 and Win32) Output},
   author = {Venkatraman E. Seshan and Adam Olshen},
   year = {2022},
   note = {R package version 1.70.0},
+}
+
+@Manual{R-DOSE,
+  title = {DOSE: Disease Ontology Semantic and Enrichment analysis},
+  author = {Guangchuang Yu},
+  year = {2022},
+  note = {R package version 3.22.1},
+  url = {https://yulab-smu.top/biomedical-knowledge-mining-book/},
 }
 
 @Manual{R-dplyr,
@@ -213,6 +221,22 @@ ggplot2},
   year = {2023},
   note = {R package version 0.9.3},
   url = {https://github.com/slowkow/ggrepel},
+}
+
+@Manual{R-ggthemes,
+  title = {ggthemes: Extra Themes, Scales and Geoms for ggplot2},
+  author = {Jeffrey B. Arnold},
+  year = {2021},
+  note = {R package version 4.2.4},
+  url = {https://github.com/jrnold/ggthemes},
+}
+
+@Manual{R-graphite,
+  title = {graphite: GRAPH Interaction from pathway Topological Environment},
+  author = {Enrica Calura and Chiara Romualdi},
+  year = {2022},
+  note = {R package version 1.42.0},
+  url = {https://github.com/sales-lab/graphite},
 }
 
 @Manual{R-gridExtra,
@@ -506,6 +530,14 @@ Estimation},
   url = {http://github.com/jdstorey/qvalue},
 }
 
+@Manual{R-ReactomePA,
+  title = {ReactomePA: Reactome Pathway Analysis},
+  author = {Guangchuang Yu},
+  year = {2022},
+  note = {R package version 1.40.0},
+  url = {https://yulab-smu.top/biomedical-knowledge-mining-book/},
+}
+
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
@@ -765,6 +797,18 @@ Ordered Observations)},
   doi = {10.1089/omi.2011.0118},
 }
 
+@Article{DOSE2015,
+  title = {DOSE: an R/Bioconductor package for Disease Ontology Semantic and Enrichment analysis},
+  author = {Guangchuang Yu and Li-Gen Wang and Guang-Rong Yan and Qing-Yu He},
+  journal = {Bioinformatics},
+  year = {2015},
+  volume = {31},
+  number = {4},
+  pages = {608-609},
+  url = {http://bioinformatics.oxfordjournals.org/content/31/4/608},
+  doi = {10.1093/bioinformatics/btu684},
+}
+
 @Article{gdsfmt2012,
   title = {A High-performance Computing Toolset for Relatedness and Principal Component Analysis of SNP Data},
   author = {Xiuwen Zheng and David Levine and Jess Shen and Stephanie Gogarten and Cathy Laurie and Bruce Weir},
@@ -811,6 +855,22 @@ Ordered Observations)},
   year = {2016},
   isbn = {978-3-319-24277-4},
   url = {https://ggplot2.tidyverse.org},
+}
+
+@Article{graphite2012,
+  title = {{graphite} - a Bioconductor package to convert pathway topology to gene network},
+  author = {Gabriele Sales and Enrica Calura and Duccio Cavalieri and Chiara Romualdi},
+  journal = {BMC Bioinformatics},
+  year = {2012},
+  url = {https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-13-20},
+}
+
+@Article{graphite2018,
+  title = {{metaGraphite} - a new layer of pathway annotation to get metabolite networks},
+  author = {Gabriele Sales and Enrica Calura and Chiara Romualdi},
+  journal = {Bioinformatics},
+  year = {2018},
+  url = {https://academic.oup.com/bioinformatics/advance-article/doi/10.1093/bioinformatics/bty719/5090451},
 }
 
 @Article{illuminaio2013,
@@ -1120,6 +1180,19 @@ likelihood estimation of semiparametric generalized linear models},
   journal = {The Journal of Open Source Software},
   year = {2018},
   doi = {10.21105/joss.00731},
+}
+
+@Article{ReactomePA2016,
+  title = {ReactomePA: an R/Bioconductor package for reactome pathway analysis and visualization},
+  author = {Guangchuang Yu and Qing-Yu He},
+  journal = {Molecular BioSystems},
+  year = {2016},
+  volume = {12},
+  number = {12},
+  pages = {477-479},
+  pmid = {26661513},
+  url = {http://pubs.rsc.org/en/Content/ArticleLanding/2015/MB/C5MB00663E},
+  doi = {10.1039/C5MB00663E},
 }
 
 @Article{regioneR,
