--- a/05-enrichment.Rmd
+++ b/05-enrichment.Rmd
@@ -72,16 +72,11 @@ The idea is to compare the list of genes that overlap our CpGs with the list of
 all the human genes that are anotated in specific databases. With this, we can see
 if our list of genes is a random subset or no.
 
-We will work with the Gene Ontology (GO) and the Kyoto Encyclopedia of
-Genes and Genomes (KEGG) databases. The GO database allows us to see if a
-specific gene function is overrepresented in our gene list. The KEGG database
-will show if a specific pathway is overrepresented in our gene list. 
-
 First of all we convert Gene Symbols to Ensembl and Entrez Gene IDs to use them later
-```{r nameconversion}
+```{r nameconversion, warning=FALSE}
 ids <- bitr(ann.genes.current, fromType="SYMBOL", toType=c("ENSEMBL", "ENTREZID"), OrgDb="org.Hs.eg.db")
 ```
-
+### GO
 
 We will first work with the Gene Ontology (GO) database, that allows us to see if a
 specific gene function is overrepresented in our gene list. We need to obtain the
@@ -92,7 +87,6 @@ df = as.data.frame(org.Hs.egGO)
 go_gene_list = unique(sort(df$gene_id))
 ```
 
-### GO
 And then run the analyses and keep the most interesting results.
 ```{r goresults}
 ans.go <- enrichGO(gene = ids$ENTREZID,
@@ -119,13 +113,15 @@ p2
 ### Reactome
 Now we do the same for the Reactome database
 ```{r reactresults, eval=FALSE}
-x <- enrichPathway(gene=ids$ENTREZID, pvalueCutoff = 0.05, readable=TRUE)
-viewPathway("Platelet activation, signaling and aggregation", 
-            readable = TRUE)
+ans.react <- enrichPathway(gene=ids$ENTREZID, pvalueCutoff = 0.05, readable=TRUE)
+tab.react <- as.data.frame(ans.react)
+tab.react<- subset(tab.react, Count>5)
+head(tab.react)
 ```
 
-REACTOME Y DISEASE 
-```{r}
+### Disease
+To be provided
+```{r, eval=FALSE, include=FALSE}
 ans.do <- enrichDO(gene     = ids$`ncbi-geneid`,
               ont           = "DO",
               pvalueCutoff  = 0.05,
@@ -138,15 +134,6 @@ ans.do <- enrichDO(gene     = ids$`ncbi-geneid`,
 
 ncg <- enrichNCG(ids$`ncbi-geneid`)
 ```
-
-```{r keggplots, eval=FALSE}
-
-p3 <- barplot(ans.do, showCategory=10) + ggtitle('Never vs Current Smokers') + theme(plot.title = element_text(size = 25))
-p3
-ans.go <- pairwise_termsim(ans.go)
-p4 <- emapplot(ans.kegg) + ggtitle('Never vs Current Smokers') + theme(plot.title = element_text(size = 25))
-p4
-```
 ### Online Tools
 
 The functional enrichment can also be done online with some interesting tools:
@@ -156,7 +143,8 @@ or tissue-type specific signals in epigenomic data by looking at the overlap bet
 differentially methylated positions (DMPs) with DNase I hypersensitive sites (DHSs) 
 
 
-[**EWAS Catalog**](http://www.ewascatalog.org/) is a huge database of EWAS results
+[**EWAS Catalog**](http://www.ewascatalog.org/) is a huge database of EWAS results.
+We can submit the names of our top CpGs to see the last published information about them
 
 
 
