Rmd 2-5 minor changes

--- a/02-preproc.Rmd
+++ b/02-preproc.Rmd
@@ -21,7 +21,8 @@ library(meffil)
 library(Biobase)
 ```
 
-Then we need to create a sample sheet from the IDAT files.
+Then we need to create a sample sheet from the IDAT files (in this case, 20 IDAT
+files corresponding to 10 individuals)
 ```{r ssview}
 samplesheet_sub <- meffil.create.samplesheet("./data/DAY2/Input/IDAT_cohort1_subset",
                                          recursive=TRUE)
@@ -36,7 +37,7 @@ remove the duplicates.
 
 First we load the phenotype data
 ```{r phenoload}
-pheno <- read.table("./data/DAY2/Input/GSE42861_pheno_cohort1.txt",
+pheno <- read.table("/data/DAY2/Input/GSE42861_pheno_cohort1.txt",
                     sep = '\t', header = T)
 head(pheno)
 ```
@@ -52,10 +53,6 @@ samplesheet_sub <- merge(samplesheet_sub[,c('Sample_Name', 'Slide',
 head(samplesheet_sub)
 ```
 
-Finally we can save the sample sheet
-```{r save}
-save(samplesheet_sub, file="./data/DAY2/Output/SampleSheet_cohort1_subset.RData")
-```
 
 ## Sample and CpG quality control
 Once we have the sample sheet, the first step for the QC is the creation of the 
@@ -71,15 +68,16 @@ qc.objects <- meffil.qc(samplesheet_sub,
                         verbose=TRUE,
                         detection.threshold	= 0.01,
                         bead.threshold = 3)
-save(qc.objects,
-     file = './data/DAY2/Output/QCObjects_cohort1_subset.RData')
 ```
 
-As you can see, this step is very time-consuming. Now that we have learned to
-create the SampleSheet and run the first steps of the QC, we will continue
-working with the full dataset. We need to load the QC Objects:
+As you can see, this step is very time-consuming. 
+
+Now that we have learned to create the SampleSheet and run the first steps of 
+the QC using 10 samples, we will continue working with the full dataset.
+We need to load the same QC Objects we have just created, but those including all
+the samples
 ```{r loadqc}
-load('./data/DAY2/Output/QCObjects_cohort1.RData')
+load('/data/DAY2/Output/QCObjects_cohort1.RData')
 ```
 
 After that, we setup the parameters for the QC
@@ -103,13 +101,18 @@ qc.summary <- meffil.qc.summary(
 )
 ```
 
-To generate the QC report we can run:
-```{r qcrep, eval=FALSE}
-meffil.qc.report(qc.summary,
-                 output.file="./data/DAY2/Output/QCReport_cohort1.html")
-```
+**DO NOT RUN THIS STEP IN THE VIRTUAL MACHINE** - The report can
+be found [here](./data/DAY2/Output/QCReport_cohort1.html)
+
 This line creates an html report with several QC tests. We need to examine it
 with detail.
+
+```{r qcrep, eval=FALSE}
+meffil.qc.report(qc.summary, 
+                 output.file="./data/DAY2/Output/QCReport_cohort1.html")
+```
+If you are working in the virtual machine, just open the report that we have 
+already created with this same data.
 
 
 The next step is getting rid of the samples that do not pass the QC. In this
@@ -162,10 +165,6 @@ norm.beta <- norm.beta[!rownames(norm.beta) %in% bad_cpgs, !colnames(norm.beta) 
 norm.objects <- norm.objects[!names(norm.objects)%in% bad_ids]
 gc(reset=TRUE)
 
-save(norm.objects,
-     file = "./data/DAY2/Output/NormObjects_cohort1.RData")
-save(norm.beta,
-     file = "./data/DAY2/Output/NormBeta_cohort1.Robj")
 ```
 Instead, load the normalisation objects and the betas that we provide:
 ```{r load_norm}
@@ -175,6 +174,7 @@ load("./data/DAY2/Output/NormBeta_cohort1.Robj")
 
 Now we can create a normalisation report. We need to convert to factor all the
 batch variables that we want to assess and recalculate the PCs
+
 ```{r pre_norm, message=FALSE, results=FALSE}
 for (i in 1:length(norm.objects)){
   norm.objects[[i]]$samplesheet$Slide<-as.factor(norm.objects[[i]]$samplesheet$Slide)
@@ -196,7 +196,11 @@ norm.parameters <- meffil.normalization.parameters(
 pcs <- meffil.methylation.pcs(norm.beta,verbose=T, full.obj = T)
 ```
 
-Finally, we obtain the normalisation summary and report
+Finally, we obtain the normalisation summary and report.
+
+Same as above, **DO NOT RUN THIS STEP IN THE VIRTUAL MACHINE**. The report can
+be found [here](./data/DAY2/Output/NormReport_cohort1.html)
+
 ```{r normsumm, eval=FALSE}
 norm.summary <- meffil.normalization.summary(norm.objects,
                                              pcs$x,
@@ -209,14 +213,10 @@ meffil.normalization.report(norm.summary,
 ### Estimation of cell type proportions
 
 To run the EWAS, we will need to know the cell type proportions. They are
-automatically calculated in the first steps of the QC and can be recovered and
-saved this way:
+automatically calculated in the first steps of the QC and can be recovered this way:
 ```{r cc}
 cc<-t(sapply(qc.objects, function(obj) obj$cell.counts$counts))
 cc<-data.frame(PatientID=row.names(cc),cc) 
-write.table(cc,
-            file = "./data/DAY2/Output/CellComp_cohort1.txt",
-            quote = F, row.names = F, sep = '\t')
 ```
 
 We add this information to the phenotype that we already have
@@ -262,13 +262,6 @@ eSet
 
 Once we have saved the ExpressionSet with the normalised betas and the
 phenotypes we are ready to run the EWAS.
-
-**DO NOT RUN THIS STEP IN THE CLASS** - it is very time consuming. We will
-provide the eSet needed for the EWAS.
-```{r saveeset, eval=FALSE}
-# DO NOT RUN
-saveRDS(eSet, 'save_path')
-```
 
 
 **ANSWERS**
