--- a/packages.bib
+++ b/packages.bib
@@ -247,6 +247,14 @@ ggplot2},
   url = {https://CRAN.R-project.org/package=gridExtra},
 }
 
+@Manual{R-igraph,
+  title = {igraph: Network Analysis and Visualization},
+  author = {Gábor Csárdi and Tamás Nepusz and Vincent Traag and Szabolcs Horvát and Fabio Zanini and Daniel Noom and Kirill Müller},
+  year = {2023},
+  note = {R package version 1.5.0},
+  url = {https://CRAN.R-project.org/package=igraph},
+}
+
 @Manual{R-IlluminaHumanMethylation450kanno.ilmn12.hg19,
   title = {IlluminaHumanMethylation450kanno.ilmn12.hg19: Annotation for Illumina's 450k methylation arrays},
   author = {Kasper Daniel Hansen},
@@ -871,6 +879,16 @@ Ordered Observations)},
   journal = {Bioinformatics},
   year = {2018},
   url = {https://academic.oup.com/bioinformatics/advance-article/doi/10.1093/bioinformatics/bty719/5090451},
+}
+
+@Article{igraph2006,
+  title = {The igraph software package for complex network research},
+  author = {Gabor Csardi and Tamas Nepusz},
+  journal = {InterJournal},
+  volume = {Complex Systems},
+  pages = {1695},
+  year = {2006},
+  url = {https://igraph.org},
 }
 
 @Article{illuminaio2013,
